<resources>
    <string name="app_name">Movie Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="theatres">Theatres</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="Sign_In_With_google">Sign In With Google</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account ? </string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login_page_slogan">Feel Boring ?, Just Try \n   Ticket New App</string>
    <string name="hint_username"> Email</string>
    <string name="hint_password">Password</string>
    <string name="loading">Loading...</string>
    <string name="name">Name <font color="#FF0000">*</font></string>
    <string name="enter_your_name">Enter Your Name </string>
    <string name="mobile_number">Mobile Number <font color="#FF0000">*</font></string>
    <string name="enter_your_mobile_no">Enter Your Mobile No</string>
    <string name="email_id">Email Id <font color="#FF0000">*</font></string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="submit">Submit</string>
    <string name="password">Password <font color="#FF0000">*</font></string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="re_enter_password">Re-Enter Password <font color="#FF0000">*</font></string>
    <string name="re_enter_password_hint">Re-Enter Password</string>

</resources>