<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.ticketbooking.signIn.SignInPageViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/signIn_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/overlapView"
            android:visibility="gone"
            android:text="@string/loading"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="?colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <!--                                <ProgressBar-->
                <!--                    android:id="@+id/signIn_progress_bar"-->
                <!--                    style="?android:attr/progressBarStyleLarge"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:indeterminate="true"-->
                <!--                    android:indeterminateTint="@color/black"-->
                <!--                    android:indeterminateTintMode="src_atop"-->
                <!--                    android:text="Please Wait...."-->
                <!--                    android:visibility="gone" />-->

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="120dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_ticket_new"
                    app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
                    app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
                    app:layout_constraintStart_toStartOf="@+id/editTextUsername"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.userName}"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.585" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.passWord}"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextUsername"
                    app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:backgroundTint="#FBB602"
                    android:onClick="@{()->viewModel.signInOnClick()}"
                    android:text="@string/sign_in"
                    app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

                <Button
                    android:id="@+id/googleSignInButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#FBB602"
                    android:text="@string/Sign_In_With_google"
                    android:onClick="@{()->viewModel.googleSignInOnClick()}"
                    app:icon="@drawable/icon_google"
                    app:iconGravity="textStart"
                    app:iconPadding="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/signInButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/signInButton"
                    app:layout_constraintTop_toBottomOf="@+id/signInButton" />

                <TextView
                    android:id="@+id/dont_have_an_account_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/dont_have_an_account"
                    android:textColor="?colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/googleSignInButton"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="@+id/googleSignInButton"
                    app:layout_constraintTop_toBottomOf="@+id/googleSignInButton" />

                <TextView
                    android:id="@+id/signUp_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:autoLink="none"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()->viewModel.signUpOnClick()}"
                    android:text="@string/sign_up"
                    android:textColor="?colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/dont_have_an_account_text_view"
                    app:layout_constraintStart_toEndOf="@+id/dont_have_an_account_text_view"
                    app:layout_constraintTop_toTopOf="@+id/dont_have_an_account_text_view"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/get_your_ticket_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:padding="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
                    app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
                    app:layout_constraintStart_toStartOf="@+id/editTextUsername"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:srcCompat="@drawable/icon_sign_in_get_your_ticket" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>